docs: fix and complete JavaDoc comments across src/main
- Fix stale cache-key descriptions in AcceleratedProxy (class and
  PROXY_CLASS_CACHE javadoc now match the actual CacheParams key)
- Remove unresolvable {@link}/@see references to the JDK's package-private
  java.lang.reflect.WeakCache and the misused @author tag in WeakCache
- Add JavaDoc to ~40 undocumented private/package-private members across
  the generator, root, and internal packages
- Complete missing @param/@return/@throws tags so javadoc -Xdoclint:all
  -package passes with zero warnings
- Archive openspec change fix-javadoc-comments